# cuda-ray-tracer

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  action.yml  compare.py  do.sh  entrypoint.sh
src/: main.cpp  main.cu  render.hpp  scenes.hpp
src/iris/: camera.hpp  color.hpp  cudaHeaders.cuh  error.hpp  hit.hpp  hittable.hpp  image.hpp  linalg.hpp  material.hpp  math.hpp  prelude.hpp  random.hpp  ray.hpp  rng.hpp  scattering.hpp  schlick.hpp  sphere.hpp
